[package]
name = "service-account"
version = "0.1.0"
authors = ["vitalije <vitalije@kviziracija.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.2"
service-authenticator = {path="../service-authenticator"}
actix-rt = "1.1.1"
actix-web = "3.0.0"
actix-http = "2.0.0"
