[package]
name = "service-authenticator"
version = "0.1.0"
authors = [
    "Sebastian Thiel <byronimo@gmail.com>",
    "Lewin Bormann <lbo@spheniscida.de>",
    "Vitalije Milosevic <vitalije@kviziracija.net>"
]
edition = "2018"
keywords = ["google", "oauth", "v2", "actix-web"]
license = "MIT OR Apache-2.0"
description = "An oauth2 implementation, providing the 'service account'authorization flow using actix-web for communication."

[dependencies]
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
actix-rt = "1.1.1"
actix-web = {version = "3.0.0", features=["rustls"]}
actix-http = "2.0.0"
actix-connect = "2.0.0"
log = "0.4"
rustls = "0.17"
seahash = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "macros", "io-std", "time"] }
url = "2"
percent-encoding = "2"
futures = "0.3"

